# DSTI

./: README.md
Clean IT /08-04-24 With Sebastian /: Notes.txt
Clean IT /15-03-24 With Hanna/: Colab_Exercise.ipynb
Data Wrangling With SQL/File_013-GroupBy-Demystified_.28836/: index.html
Data Wrangling With SQL/File_A22_Seb_Playground_.28725/: index.html
Data Wrangling With SQL/File_Joining-By-Example_.28694/: index.html
Data Wrangling With SQL/File_MSSQL_Installation_Tutorial_.28670/: index.html
Data Wrangling With SQL/Folder_Blackboard_Files_.28672/: index.html
Data Wrangling With SQL/Folder_Blackboard_Files_.28691/: index.html
Data Wrangling With SQL/Folder_Blackboard_Files_.28712/: index.html
Data Wrangling With SQL/Folder_Blackboard_Files_.28826/: index.html
Data Wrangling With SQL/URL_SQLZoo_.28666/: index.html
ML/: ML Course.txt
ML/File_Ames_House_Pricing_.28911/: index.html
ML/File_Housing_dataset_discovery_.28908/: index.html
ML/File_Titanic_.28914/: index.html
Warm UP/Python/Advanced/Part 2 Web-Scraping/book-scraper exemple/: README.md  pyproject.toml
Warm UP/Python/Advanced/Part 2 Web-Scraping/book-scraper exemple/book_scraper/: data_export.py  main.py  parse_website_html.py  url_request.py
Warm UP/Python/Beginner/Part 2 Web-Scraping/book-scrapper/: pyproject.toml
Warm UP/Python/Beginner/Part 2 Web-Scraping/book-scrapper/book_scraper/: main.py  parse_website_html.py  url_request.py
Warm UP/Python/Beginner/Part 2 Web-Scraping/book-scrapper/book_scrapper1/: soup_parsing.py  url_get.py
(+64 files in other folders)
