[tool.poetry]
name = "book-scraper"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "book_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
