[tool.poetry]
name = "book-scrapper"
version = "0.1.0"
description = ""
authors = ["Guillaume Pealat <guillaume.pealat@gmail.com>"]
readme = "README.md"
packages = [{include = "book_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
